--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,10 +29,10 @@ jobs:
           go-version: '1.21'
 
       - name: Run tests
-        run: make -f Makefile.go test
+        run: make test
 
       - name: Run linter
-        run: make -f Makefile.go lint || true
+        run: make lint || true
 
       - name: Install Goreleaser
         uses: goreleaser/goreleaser-action@v5
