Update installation documentation and npm package structure
- Enhanced the INSTALL.md and README.md files to provide clearer installation methods and usage instructions for the Port CLI.
- Added npm package build artifacts to .gitignore to prevent unnecessary files from being tracked.
- Introduced a new install.js script to manage binary installations for different platforms.
- Created package.json and README.md for the npm package distribution, including platform support details.
- Implemented a build-npm.sh script to automate the packaging of binaries for npm distribution.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ on:
 
 permissions:
   contents: write
+  id-token: write
 
 jobs:
   release:
@@ -55,4 +56,36 @@ jobs:
         with:
           name: release-binaries
           path: dist/*
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Get version from tag
+        id: get_version
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            VERSION="${{ github.event.inputs.version }}"
+          else
+            VERSION="${GITHUB_REF#refs/tags/}"
+          fi
+          # Remove 'v' prefix for npm
+          VERSION_NO_V="${VERSION#v}"
+          echo "version=$VERSION_NO_V" >> $GITHUB_OUTPUT
+          echo "version_tag=$VERSION" >> $GITHUB_OUTPUT
+          echo "Version: $VERSION_NO_V"
+
+      - name: Build npm package
+        run: |
+          VERSION="${{ steps.get_version.outputs.version_tag }}" ./scripts/build-npm.sh
+
+      - name: Publish to npm
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        run: |
+          cd npm
+          npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
